style amends - prevent overflow

--- a/assets/stylesheets/_variables.scss
+++ b/assets/stylesheets/_variables.scss
@@ -80,6 +80,7 @@ $input-border-radius: 5px;
 $category-title-font-size: px-rem(18px);
 $category-title-padding: 20px 10px;
 $category-topic-font-size: px-rem(16px);
+$category-posts-font-size: px-rem(14px);
 $category-box-header-font-size: px-rem(16px);
 $category-box-header-line-height: 1.35;
 
